welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:2: error: c is already defined as variable c
var c = 0
    ^Runner:9: error: reassignment to val
    c=c+1
     ^Runner:11: error: reassignment to val
  t=t+1
   ^